# clickhousectl

./: .git-blame-ignore-revs  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: cloud-integration.yml  fmt.yml  npm-publish.yml  openapi-drift.yml  release.yml  test-cli.yml  test-cloud-api.yml  test-install.yml  test-postgres-integration.yml
crates/clickhouse-cloud-api/: Cargo.toml  README.md  clickhouse_cloud_openapi.json
crates/clickhouse-cloud-api/src/: client.rs  error.rs  lib.rs  meta.rs  models.rs  serde_helpers.rs
crates/clickhouse-cloud-api/tests/: client_test.rs  integration_clickpipe_e2e_test.rs  integration_clickpipe_kafka_test.rs  integration_clickpipe_kinesis_test.rs  integration_clickpipe_mongo_test.rs  integration_clickpipe_mysql_test.rs  integration_clickpipe_postgres_cdc_test.rs  integration_clickpipe_postgres_ec2_test.rs  integration_clickpipe_s3_test.rs  integration_clickpipe_smoke_test.rs  integration_clickstack_test.rs  integration_org_test.rs  integration_postgres_test.rs  integration_test.rs  models_test.rs  run_query_test.rs  spec_coverage_test.rs
crates/clickhouse-cloud-api/tests/clickpipes/: driver.rs  e2e_test.rs  kafka_test.rs  kinesis_test.rs  mongo_test.rs  mysql_test.rs  postgres_cdc_test.rs  postgres_ec2_test.rs  s3_test.rs  smoke_test.rs  support.rs
crates/clickhouse-cloud-api/tests/clickpipes/stages/: kafka.rs  kinesis.rs  mod.rs  mongo.rs  mongo_user_data.sh.template  mysql.rs  mysql_user_data.sh.template  postgres.rs  postgres_user_data.sh.template  redpanda_user_data_scram_tls.sh.template  s3.rs
crates/clickhouse-cloud-api/tests/common/: support.rs
crates/clickhouse-cloud-api/tests/integration/: cli.rs  driver.rs  mod.rs  redpanda_user_data_mtls.sh.template  stages.rs  support.rs
crates/clickhouse-cloud-api/tests/integration/stages/: kafka.rs  kinesis.rs  mod.rs  mongo.rs  mysql.rs  mysql_user_data.sh.template  postgres.rs  s3.rs
crates/clickhouse-openapi-analyzer/: Cargo.toml
crates/clickhouse-openapi-analyzer/src/: compare.rs  config.rs  lib.rs  main.rs  openapi.rs  report.rs  rust_inventory.rs
crates/clickhouse-openapi-analyzer/tests/: entrypoint_test.rs
crates/clickhousectl/: Cargo.toml
crates/clickhousectl/src/: agent_signal.rs  cli.rs  dotenv.rs  error.rs  http.rs  init.rs  main.rs  output_mode.rs  paths.rs  skills.rs  telemetry.rs  update.rs  user_agent.rs
crates/clickhousectl/src/cloud/: auth.rs  cli.rs  clickstack.rs  client.rs  commands.rs  credentials.rs  mod.rs  output.rs  postgres.rs  service_query.rs  types.rs  types_test.rs
crates/clickhousectl/src/local/: cli.rs  config.rs  discovery.rs  docker.rs  mod.rs  output.rs  postgres.rs  server.rs  symlink.rs
crates/clickhousectl/src/version_manager/: download.rs  install.rs  list.rs  master.rs  mod.rs  platform.rs  resolve.rs  spec.rs
crates/clickhousectl/tests/: cli_request_shape_test.rs  local_install_local_first_test.rs  telemetry_test.rs
homebrew/: clickhousectl.rb.tmpl
npm/: README.md  install.js  package.json
npm/clickhousectl/: .npmignore  README.md  bin.js  package.json
pypi/: pyproject.toml
scripts/: check-openapi-drift.py  prepare-npm-release.mjs  regenerate-beta-lists.py  regenerate-deprecated-fields.py  resolve-field-requirements.py  test-postgres-integration.sh  update-homebrew-formula.sh  update-models-optionality.py
scripts/tests/: test_check_openapi_drift.py
src/: cli.rs  error.rs  init.rs  local_output.rs  main.rs  paths.rs  server.rs  skills.rs  update.rs
src/cloud/: auth.rs  cli.rs  client.rs  client_test.rs  commands.rs  mod.rs  types.rs  types_test.rs
src/local/: cli.rs  discovery.rs  mod.rs  output.rs  server.rs
src/version_manager/: download.rs  install.rs  list.rs  mod.rs  platform.rs  resolve.rs
tests/: cloud_cli.rs
tests/cloud_cli/: force_delete.rs  service_crud.rs  support.rs
