[package]
name = "clickhousectl"
version = "0.1.11"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
indicatif = "0.18"
futures-util = "0.3"
base64 = "0.22"
rpassword = "7"
libc = "0.2.183"
urlencoding = "2.1.3"
