[package]
name = "clickhousectl"
version = "0.1.18"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
indicatif = "0.18"
futures-util = "0.3"
base64 = "0.22"
rpassword = "7"
libc = "0.2.183"
urlencoding = "2.1.3"
flate2 = "1.1.9"
tar = "0.4.45"
chrono = "0.4.44"
open = "5.3.3"
url = "2.5.8"
tabled = "0.20.0"

[dev-dependencies]
tempfile = "3.27.0"
