[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "clickhousectl"
dynamic = ["version", "description", "license", "readme", "authors", "urls"]
requires-python = ">=3.9"
keywords = ["clickhouse", "cli", "database", "cloud"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Database",
]

[tool.maturin]
bindings = "bin"
manifest-path = "../crates/clickhousectl/Cargo.toml"
strip = true
