[package]
name = "clickhouse-cloud-api"
version = "0.2.0"
edition = "2024"
description = "Typed Rust client for the ClickHouse Cloud API"
license = "MIT"

[dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
aws-config = { version = "1.8.16", features = ["credentials-login"] }
aws-credential-types = "1.2.14"
aws-sdk-ec2 = "1.225.0"
aws-sdk-iam = "1.108.1"
aws-sdk-kinesis = "1.104.0"
aws-sdk-s3 = "1.132.0"
base64 = "0.22.1"
chrono = "0.4"
rcgen = "0.14.8"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.8.3"
rustls-pemfile = "2.2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.17"
tokio-postgres-rustls = "0.13.0"
uuid = "1"
wiremock = "0.6"
