[package]
name = "clickhouse-openapi-analyzer"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "clickhouse_openapi_analyzer"

[[bin]]
name = "openapi-drift-analyzer"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
quote = "1.0.46"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
syn = { version = "2.0.118", features = ["full", "parsing"] }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
