[package]
name = "clickhousectl"
version = "0.2.1"
edition = "2024"
description = "The CLI for ClickHouse: local and cloud."
license = "Apache-2.0"
repository = "https://github.com/ClickHouse/clickhousectl"
homepage = "https://github.com/ClickHouse/clickhousectl"
keywords = ["clickhouse", "cli", "database", "cloud"]
categories = ["command-line-utilities", "database"]
readme = "../../README.md"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["stream", "json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
indicatif = "0.18"
futures-util = "0.3"
rpassword = "7.5.2"
libc = "0.2.183"
urlencoding = "2.1.3"
flate2 = "1.1.9"
tar = "0.4.45"
chrono = "0.4.44"
open = "5.3.3"
url = "2.5.8"
tabled = "0.20.0"
clickhouse-cloud-api = { version = "0.2.1", path = "../clickhouse-cloud-api" }
uuid = { version = "1.23.0", features = ["v4"] }
is-ai-agent = "0.2.1"
base64 = "0.22.1"
bollard = "0.21.0"
crossterm = "0.29.0"
rand = "0.10.1"

[dev-dependencies]
serde_json = "1"
tempfile = "3.27.0"
wiremock = "0.6.5"
